--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FinModel Pro - Финансовое моделирование для стартапов</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./app.js"></script>
 </head>
 <body>
     <!-- Header -->
